--- a/kde-misc/kio_gopher/ChangeLog
+++ b/kde-misc/kio_gopher/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/kio_gopher
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kio_gopher/ChangeLog,v 1.8 2012/01/22 20:51:15 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kio_gopher/ChangeLog,v 1.9 2012/11/14 14:47:48 kensington Exp $
+
+  14 Nov 2012; Michael Palimaka <kensington@gentoo.org>
+  -kio_gopher-0.1.3.ebuild:
+  Remove old.
 
 *kio_gopher-0.1.4 (22 Jan 2012)
 
@@ -23,4 +27,3 @@
   03 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
   +kio_gopher-0.1.3.ebuild:
   Initial commit wrt #253735, thanks to Matija Suklje for reporting.
-
