--- a/x11-misc/xtrlock/ChangeLog
+++ b/x11-misc/xtrlock/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/xtrlock
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.20 2012/03/05 10:33:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.21 2012/11/14 16:19:36 jer Exp $
+
+*xtrlock-2.2 (14 Nov 2012)
+
+  14 Nov 2012; Jeroen Roovers <jer@gentoo.org> +xtrlock-2.2.ebuild:
+  Version bump by Mr. Anderson (bug #443090).
 
   05 Mar 2012; Agostino Sarubbo <ago@gentoo.org> xtrlock-2.0-r3.ebuild:
   Stable for amd64, wrt bug #397289
