--- a/x11-misc/xtrlock/ChangeLog
+++ b/x11-misc/xtrlock/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xtrlock
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.21 2012/11/14 16:19:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.22 2012/11/14 16:24:04 jer Exp $
+
+  14 Nov 2012; Jeroen Roovers <jer@gentoo.org> xtrlock-2.2.ebuild:
+  Install debian/changelog.
 
 *xtrlock-2.2 (14 Nov 2012)
 
