--- a/media-video/projectx/ChangeLog
+++ b/media-video/projectx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/projectx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/projectx/ChangeLog,v 1.63 2012/11/09 15:46:59 billie Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/projectx/ChangeLog,v 1.64 2012/11/14 16:34:15 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> projectx-0.91.0.04.ebuild:
+  Stable for amd64, wrt bug #441416
 
 *projectx-0.91.0.05 (09 Nov 2012)
 
