--- a/net-libs/libktorrent/ChangeLog
+++ b/net-libs/libktorrent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libktorrent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libktorrent/ChangeLog,v 1.40 2012/09/20 11:56:19 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libktorrent/ChangeLog,v 1.41 2012/11/14 16:35:18 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libktorrent-1.3.0.ebuild:
+  Stable for amd64, wrt bug #441452
 
   20 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libktorrent-1.2.0.ebuild,
   libktorrent-1.2.1.ebuild:
