--- a/net-p2p/ktorrent/ChangeLog
+++ b/net-p2p/ktorrent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/ktorrent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ktorrent/ChangeLog,v 1.186 2012/09/20 11:57:37 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ktorrent/ChangeLog,v 1.187 2012/11/14 16:35:40 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> ktorrent-4.3.0.ebuild:
+  Stable for amd64, wrt bug #441452
 
   20 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> -ktorrent-4.2.0.ebuild,
   ktorrent-4.2.1.ebuild:
