--- a/www-apps/phpsysinfo/ChangeLog
+++ b/www-apps/phpsysinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/phpsysinfo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/phpsysinfo/ChangeLog,v 1.68 2012/11/14 11:21:50 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/phpsysinfo/ChangeLog,v 1.69 2012/11/14 16:36:22 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> phpsysinfo-3.0.19.ebuild:
+  Stable for amd64, wrt bug #441544
 
   14 Nov 2012; Anthony G. Basile <blueness@gentoo.org> phpsysinfo-3.0.19.ebuild:
   stable ppc ppc64, bug #441544
