--- a/dev-db/oracle-instantclient-odbc/ChangeLog
+++ b/dev-db/oracle-instantclient-odbc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/oracle-instantclient-odbc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/oracle-instantclient-odbc/ChangeLog,v 1.10 2012/06/04 06:41:21 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/oracle-instantclient-odbc/ChangeLog,v 1.11 2012/11/14 17:19:12 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
+  oracle-instantclient-odbc-11.2.0.3.ebuild:
+  Stable for amd64, wrt bug #397571
 
   04 Jun 2012; Zac Medico <zmedico@gentoo.org>
   oracle-instantclient-odbc-11.2.0.2-r1.ebuild,
