--- a/dev-libs/libaio/ChangeLog
+++ b/dev-libs/libaio/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libaio
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libaio/ChangeLog,v 1.69 2012/11/14 17:18:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libaio/ChangeLog,v 1.70 2012/11/14 17:19:51 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libaio-0.3.109-r3.ebuild:
+  Stable for x86, wrt bug #397571
 
   14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libaio-0.3.109-r3.ebuild:
   Stable for amd64, wrt bug #397571
