--- a/net-irc/hexchat/ChangeLog
+++ b/net-irc/hexchat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/hexchat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.11 2012/10/20 15:33:39 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.12 2012/11/14 17:34:10 jer Exp $
+
+  14 Nov 2012; Jeroen Roovers <jer@gentoo.org> hexchat-2.9.3.ebuild:
+  Stable for HPPA (bug #443118).
 
   20 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> hexchat-2.9.3.ebuild:
   Keyword ~amd64-linux
