--- a/games-arcade/smc/ChangeLog
+++ b/games-arcade/smc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/smc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/smc/ChangeLog,v 1.27 2012/11/14 16:23:31 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/smc/ChangeLog,v 1.28 2012/11/14 17:39:57 mr_bones_ Exp $
+
+  14 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> smc-1.9.ebuild:
+  open up the cegui dep
 
   14 Nov 2012; Tupone Alfredo <tupone@gentoo.org> smc-1.9.ebuild,
   +files/smc-1.9-boost150.patch:
