--- a/net-analyzer/pmacct/ChangeLog
+++ b/net-analyzer/pmacct/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/pmacct
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.83 2012/11/03 20:19:38 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.84 2012/11/14 18:21:49 jer Exp $
+
+  14 Nov 2012; Jeroen Roovers <jer@gentoo.org> pmacct-0.14.1.ebuild:
+  Export AR and RANLIB for cross-compiling (bug #443122 by Denis M.).
 
   03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> pmacct-0.14.1.ebuild:
   stable ppc, bug #441430
