--- a/dev-cpp/clucene/ChangeLog
+++ b/dev-cpp/clucene/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/clucene
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/clucene/ChangeLog,v 1.56 2012/11/13 19:47:28 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/clucene/ChangeLog,v 1.57 2012/11/14 19:07:49 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> clucene-2.3.3.4-r4.ebuild:
+  Stable for amd64, wrt bug #441938
 
   13 Nov 2012; Jeroen Roovers <jer@gentoo.org> clucene-2.3.3.4-r4.ebuild:
   Stable for HPPA (bug #441938).
