--- a/net-analyzer/pmacct/ChangeLog
+++ b/net-analyzer/pmacct/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/pmacct
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.84 2012/11/14 18:21:49 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pmacct/ChangeLog,v 1.85 2012/11/14 19:08:07 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> pmacct-0.14.1.ebuild:
+  Stable for amd64, wrt bug #441430
 
   14 Nov 2012; Jeroen Roovers <jer@gentoo.org> pmacct-0.14.1.ebuild:
   Export AR and RANLIB for cross-compiling (bug #443122 by Denis M.).
