--- a/app-office/kmymoney/ChangeLog
+++ b/app-office/kmymoney/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/kmymoney
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney/ChangeLog,v 1.41 2012/10/18 08:19:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney/ChangeLog,v 1.42 2012/11/14 19:57:48 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> kmymoney-4.6.3.ebuild:
+  Stable for x86, wrt bug #438566
 
   18 Oct 2012; Agostino Sarubbo <ago@gentoo.org> kmymoney-4.6.3.ebuild:
   Stable for amd64, wrt bug #438566
