--- a/app-office/kmymoney/ChangeLog
+++ b/app-office/kmymoney/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/kmymoney
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney/ChangeLog,v 1.42 2012/11/14 19:57:48 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney/ChangeLog,v 1.43 2012/11/14 20:00:20 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org>
+  -files/kmymoney-4.6.1-qt48.patch,
+  -files/kmymoney-4.6.2-fix-parallel-build.patch,
+  -files/kmymoney-4.6.2-sqlite-crash.patch, -kmymoney-4.6.2-r2.ebuild:
+  Remove old.
 
   14 Nov 2012; Johannes Huber <johu@gentoo.org> kmymoney-4.6.3.ebuild:
   Stable for x86, wrt bug #438566
