--- a/kde-misc/skanlite/ChangeLog
+++ b/kde-misc/skanlite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/skanlite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/skanlite/ChangeLog,v 1.23 2012/11/06 17:10:01 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/skanlite/ChangeLog,v 1.24 2012/11/14 20:17:47 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> skanlite-0.9.ebuild:
+  Stable for x86, wrt bug #441340
 
   06 Nov 2012; Agostino Sarubbo <ago@gentoo.org> skanlite-0.9.ebuild:
   Stable for amd64, wrt bug #441340
