--- a/kde-misc/miniplayer/ChangeLog
+++ b/kde-misc/miniplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/miniplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/miniplayer/ChangeLog,v 1.10 2012/11/14 20:13:48 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/miniplayer/ChangeLog,v 1.11 2012/11/14 20:14:50 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> -miniplayer-2.4.ebuild:
+  Remove old.
 
   14 Nov 2012; Johannes Huber <johu@gentoo.org> miniplayer-2.5.ebuild:
   Stable for x86, wrt bug #441334
