--- a/media-video/kffmpegthumbnailer/ChangeLog
+++ b/media-video/kffmpegthumbnailer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/kffmpegthumbnailer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/ChangeLog,v 1.9 2012/11/06 17:04:17 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/ChangeLog,v 1.10 2012/11/14 20:36:49 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org>
+  kffmpegthumbnailer-1.1.0-r2.ebuild:
+  Stable for x86, wrt bug #441410
 
   06 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
   kffmpegthumbnailer-1.1.0-r2.ebuild:
