--- a/media-video/kffmpegthumbnailer/ChangeLog
+++ b/media-video/kffmpegthumbnailer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/kffmpegthumbnailer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/ChangeLog,v 1.10 2012/11/14 20:36:49 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kffmpegthumbnailer/ChangeLog,v 1.11 2012/11/14 20:37:52 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org>
+  -kffmpegthumbnailer-1.1.0.ebuild:
+  Remove old.
 
   14 Nov 2012; Johannes Huber <johu@gentoo.org>
   kffmpegthumbnailer-1.1.0-r2.ebuild:
