--- a/media-gfx/kuickshow/ChangeLog
+++ b/media-gfx/kuickshow/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/kuickshow
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/kuickshow/ChangeLog,v 1.11 2012/11/14 20:50:24 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/kuickshow/ChangeLog,v 1.12 2012/11/14 20:51:22 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> -kuickshow-0.9.1.ebuild:
+  Remove old.
 
   14 Nov 2012; Johannes Huber <johu@gentoo.org> kuickshow-0.9.1-r1.ebuild:
   Stable for x86, wrt bug #441358
