--- a/net-nntp/kwooty/ChangeLog
+++ b/net-nntp/kwooty/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/kwooty
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/kwooty/ChangeLog,v 1.32 2012/11/06 17:08:31 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/kwooty/ChangeLog,v 1.33 2012/11/14 20:53:12 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org> kwooty-0.9.1.ebuild:
+  Stable for x86, wrt bug #441492
 
   06 Nov 2012; <ago@gentoo.org> kwooty-0.9.1.ebuild:
   Stable for amd64, wrt bug #441492
