--- a/net-misc/dahdi/ChangeLog
+++ b/net-misc/dahdi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dahdi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dahdi/ChangeLog,v 1.45 2012/11/14 21:03:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dahdi/ChangeLog,v 1.46 2012/11/14 21:04:11 ago Exp $
+
+  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> dahdi-2.6.1-r1.ebuild:
+  Stable for x86, wrt bug #441468
 
   14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> dahdi-2.6.1-r1.ebuild:
   Stable for amd64, wrt bug #441468
