--- a/dev-cpp/libcmis/ChangeLog
+++ b/dev-cpp/libcmis/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/libcmis
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libcmis/ChangeLog,v 1.18 2012/11/16 19:27:28 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libcmis/ChangeLog,v 1.19 2012/11/16 19:47:38 ago Exp $
+
+  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libcmis-0.1.0-r1.ebuild,
+  libcmis-0.2.3-r1.ebuild, libcmis-0.3.0.ebuild:
+  workaround for bug 399061
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libcmis-0.2.3-r1.ebuild:
   really stable
