--- a/dev-util/osc/ChangeLog
+++ b/dev-util/osc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/osc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/osc/ChangeLog,v 1.8 2012/11/16 16:37:07 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/osc/ChangeLog,v 1.9 2012/11/16 20:06:48 ago Exp $
+
+  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> osc-0.136.0.ebuild:
+  workaround for bug 399061
 
   16 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> osc-0.136.0.ebuild,
   osc-9999.ebuild:
