--- a/app-office/libreoffice/ChangeLog
+++ b/app-office/libreoffice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.394 2012/11/16 19:28:11 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.395 2012/11/16 20:09:52 ago Exp $
+
+  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libreoffice-3.6.3.2.ebuild:
+  workaround for bug 399061
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libreoffice-3.6.3.2.ebuild:
   really stable
