--- a/x11-wm/enlightenment/ChangeLog
+++ b/x11-wm/enlightenment/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/enlightenment
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.157 2012/11/08 07:56:38 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.158 2012/11/16 20:11:28 tommy Exp $
+
+*enlightenment-0.17.0_alpha3 (16 Nov 2012)
+
+  16 Nov 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  +enlightenment-0.17.0_alpha3.ebuild, metadata.xml:
+  Initial addition of alpha3 release of e17
 
   08 Nov 2012; Mike Frysinger <vapier@gentoo.org>
   enlightenment-0.16.9999.ebuild:
