--- a/app-crypt/pinentry/ChangeLog
+++ b/app-crypt/pinentry/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/pinentry
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.132 2012/11/16 18:13:32 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.133 2012/11/16 20:45:51 scarabeus Exp $
+
+  16 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> pinentry-0.8.2.ebuild:
+  Better fix the static issue with ncurses, thanks to Diego.
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> pinentry-0.8.2.ebuild:
   Stable for amd64, wrt bug #443522
