--- a/x11-wm/enlightenment/ChangeLog
+++ b/x11-wm/enlightenment/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/enlightenment
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.158 2012/11/16 20:11:28 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.159 2012/11/16 20:48:21 tommy Exp $
+
+  16 Nov 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  enlightenment-0.17.0_alpha3.ebuild, metadata.xml:
+  Remove conf-wallpaper2 module, always disabled by upstream
 
 *enlightenment-0.17.0_alpha3 (16 Nov 2012)
 
