--- a/kde-misc/kdiff3/ChangeLog
+++ b/kde-misc/kdiff3/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/kdiff3
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdiff3/ChangeLog,v 1.59 2012/11/16 22:14:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdiff3/ChangeLog,v 1.60 2012/11/16 22:46:31 johu Exp $
+
+  16 Nov 2012; Johannes Huber <johu@gentoo.org> kdiff3-0.9.97.ebuild:
+  Stable for x86, wrt bug #441330
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> kdiff3-0.9.97.ebuild:
   Stable for amd64, wrt bug #441330
