--- a/app-text/kding/ChangeLog
+++ b/app-text/kding/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/kding
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/kding/ChangeLog,v 1.20 2012/11/16 22:48:56 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/kding/ChangeLog,v 1.21 2012/11/16 22:49:59 johu Exp $
+
+  16 Nov 2012; Johannes Huber <johu@gentoo.org> -kding-0.6.ebuild:
+  Remove old.
 
   16 Nov 2012; Johannes Huber <johu@gentoo.org> kding-0.6-r1.ebuild:
   Stable for x86, wrt bug #441112
