--- a/x11-themes/greybird/ChangeLog
+++ b/x11-themes/greybird/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/greybird
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.20 2012/08/04 06:39:06 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.21 2012/11/17 06:21:04 ssuominen Exp $
+
+*greybird-1.0.7 (17 Nov 2012)
+
+  17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +greybird-1.0.7.ebuild:
+  Version bump wrt #431708 by Josh Saddler
 
   04 Aug 2012; Samuli Suominen <ssuominen@gentoo.org> greybird-0.8.2.ebuild:
   amd64/x86 stable wrt #429246
