--- a/x11-themes/greybird/ChangeLog
+++ b/x11-themes/greybird/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/greybird
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.21 2012/11/17 06:21:04 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.22 2012/11/17 06:21:52 ssuominen Exp $
+
+  17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -greybird-0.8.1.ebuild:
+  old
 
 *greybird-1.0.7 (17 Nov 2012)
 
