--- a/x11-themes/greybird/ChangeLog
+++ b/x11-themes/greybird/ChangeLog
@@ -1,11 +1,12 @@
 # ChangeLog for x11-themes/greybird
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.23 2012/11/17 10:52:38 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.24 2012/11/17 10:56:46 ssuominen Exp $
 
   17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> greybird-1.0.7.ebuild,
   metadata.xml:
   Remove myself from metadata.xml and leave the package to desktop-misc.
-  USE="ayatana" will control the installation of the Unity desktop files.
+  USE flags "ayatana" and "gnome" to control installation of files for
+  the Unity desktop and the metacity window manager.
 
   17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -greybird-0.8.1.ebuild:
   old
