--- a/x11-themes/greybird/ChangeLog
+++ b/x11-themes/greybird/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/greybird
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.24 2012/11/17 10:56:46 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/greybird/ChangeLog,v 1.25 2012/11/17 12:22:32 ssuominen Exp $
+
+  17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> greybird-1.0.7.ebuild:
+  Raise gtk-engines-unico runtime depend from 1.0.1 to 1.0.2 for better GTK+ >=
+  3.4 compability.
 
   17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> greybird-1.0.7.ebuild,
   metadata.xml:
