--- a/x11-themes/gtk-engines-unico/ChangeLog
+++ b/x11-themes/gtk-engines-unico/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-unico
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.8 2012/10/04 15:07:28 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.9 2012/11/17 12:24:27 ssuominen Exp $
+
+  17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
+  gtk-engines-unico-1.0.2.ebuild:
+  ppc/ppc64 stable and convert to prune_libtool_files from eutils.eclass
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   gtk-engines-unico-1.0.2.ebuild:
