--- a/x11-themes/gtk-engines-unico/ChangeLog
+++ b/x11-themes/gtk-engines-unico/ChangeLog
@@ -1,10 +1,11 @@
 # ChangeLog for x11-themes/gtk-engines-unico
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.9 2012/11/17 12:24:27 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.10 2012/11/17 12:27:22 ssuominen Exp $
 
   17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
   gtk-engines-unico-1.0.2.ebuild:
-  ppc/ppc64 stable and convert to prune_libtool_files from eutils.eclass
+  ppc/ppc64 stable, convert to prune_libtool_files from eutils.eclass
+  and raise EAPI to 5 for verbose build log.
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   gtk-engines-unico-1.0.2.ebuild:
