--- a/x11-themes/gtk-engines-unico/ChangeLog
+++ b/x11-themes/gtk-engines-unico/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-unico
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.10 2012/11/17 12:27:22 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.11 2012/11/17 12:29:54 ssuominen Exp $
+
+  17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -gtk-engines-unico-1.0.1.ebuild:
+  old
 
   17 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
   gtk-engines-unico-1.0.2.ebuild:
