--- a/sys-libs/libselinux/ChangeLog
+++ b/sys-libs/libselinux/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/libselinux
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.89 2012/10/29 15:36:13 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.90 2012/11/17 16:53:48 swift Exp $
+
+  17 Nov 2012; <swift@gentoo.org> libselinux-2.1.9-r3.ebuild:
+  Stabilize
 
 *libselinux-2.1.12-r1 (29 Oct 2012)
 
