--- a/games-fps/sauerbraten/ChangeLog
+++ b/games-fps/sauerbraten/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/sauerbraten
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/sauerbraten/ChangeLog,v 1.14 2012/11/16 21:04:44 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/sauerbraten/ChangeLog,v 1.15 2012/11/17 23:26:40 mr_bones_ Exp $
+
+  17 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> files/sauerbraten.init:
+  fix init script (bug #443646)
 
   16 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
   -sauerbraten-2008.06.17.ebuild:
